--- a/css/style.css
+++ b/css/style.css
@@ -9,55 +9,125 @@
 .background {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(to bottom, rgb(20, 136, 120) 120px, rgb(199, 199, 199) 120px );
+    background: linear-gradient(to bottom, rgb(20, 136, 120) 120px, rgb(194, 192, 184) 120px );
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
+h3 {
+    font-size: 16px;
+    color: black;
+    font-weight: 500;
+}
+p {
+    font-size: 12px;
+}
+i {
+    font-size: 18px;
+}
+i:hover {
+    color: grey;
+    transition: 0.2s;
+    cursor: pointer;
+}
+.write, .search {
+    height: 100%;
+    border: 2px solid white;
+    padding: 5px;
+    outline: none;
+    font-family:'Lato', sans-serif;
+}
 
 /*---------------------- CONTAINER ----------------------*/
 .container {
+    font-family: 'Lato', sans-serif;
     height: 95%;
     width: 80%;
+    box-shadow: 1px 2px 10px 1px rgba(0, 0, 0, 0.342);
     display: flex;
+    color: rgb(177, 177, 177);
 }
-
-/*------- container sections ------*/
+/*---------------------- container sections ----------------------*/
 .left-box, .right-box {
     display: flex;
     flex-direction: column;
 }
 .left-box {
     background-color: rgba(161, 112, 207, 0.164);
-    width: 40%;
-    border-right: 1px solid rgb(204, 204, 200);
+    width: 35%;
+    border-right: 2px solid rgb(219, 214, 212);
 }
 .right-box {
-    width: 60%;
+    width: 65%;
     background-color: rgba(103, 141, 85, 0.301);
 }
-
-/*------- sections ------*/
+/*---------------------- sections ----------------------*/
 .name_user, .user_msg, .write_msg {
     height: 60px;
-    background-color: rgb(219, 219, 215);
+    background-color: rgb(235, 234, 230);
+    padding: 10px;
+
+    display: flex;
+    align-items: center;
 }
 .notifiche {
     height: 70px;
     background-color: rgb(116, 196, 216);
 }
-.search {
+.search_box {
     height: 50px;
-    background-color: rgb(219, 219, 215);
+    background-color: rgb(236, 236, 236);
+    padding: 10px;
+    display: flex;
+    align-items: center;
 }
 .box_msg {
     height: calc(100% - 120px); 
-    background-color: rgb(207, 204, 172);
+    background-image: url("../img/mine.jpg");
     overflow-y: scroll;
 }
 .users_list {
     height: calc(100% - 180px); 
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(248, 248, 248);
     overflow-y: scroll;
+}
+/*---------------------- nome utente e untente in conversaione ----------------------*/
+.name_user, .user_msg {
+    justify-content: space-between;
+}
+.name_user i, .user_msg i {
+    margin: 0px 10px;
+}
+/*---------------------- search ----------------------*/
+.search {
+    width: 90%;
+    border-radius: 0px 5px 5px 0px;
+}
+.fa-search {
+    font-size: 14px;
+}
+.search_icon_box {
+    background-color: white;
+    width: 10%;
+    height: 100%;
+    border-radius: 5px 0px 0px 5px;
+    border-right: 1px solid rgb(219, 219, 215);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/*---------------------- scrivi un messaggio ----------------------*/
+.write_box {
+    width: 80%;
+}
+.icon_box {
+    width: 10%;
+    display: flex;
+    justify-content: center;
+}
+.write {
+    width: 100%;
+    border-radius: 5px;
 }
