--- a/css/style.css
+++ b/css/style.css
@@ -23,18 +23,21 @@ h3 {
 p {
     font-size: 12px;
 }
+.icons {
+    cursor: pointer;
+}
 i {
     font-size: 18px;
+    cursor: pointer;
 }
 i:hover {
     color: grey;
-    transition: 0.2s;
-    cursor: pointer;
+    transition: 0.1s;
 }
 .write, .search {
     height: 100%;
     border: 2px solid white;
-    padding: 5px;
+    padding: 10px;
     outline: none;
     font-family:'Lato', sans-serif;
 }
@@ -46,8 +49,9 @@ i:hover {
     width: 80%;
     box-shadow: 1px 2px 10px 1px rgba(0, 0, 0, 0.342);
     display: flex;
-    color: rgb(177, 177, 177);
+    color: rgb(158, 158, 158);
 }
+
 /*---------------------- container sections ----------------------*/
 .left-box, .right-box {
     display: flex;
@@ -62,18 +66,14 @@ i:hover {
     width: 65%;
     background-color: rgba(103, 141, 85, 0.301);
 }
+
 /*---------------------- sections ----------------------*/
 .name_user, .user_msg, .write_msg {
     height: 60px;
     background-color: rgb(235, 234, 230);
-    padding: 10px;
 
     display: flex;
     align-items: center;
-}
-.notifiche {
-    height: 70px;
-    background-color: rgb(116, 196, 216);
 }
 .search_box {
     height: 50px;
@@ -92,17 +92,65 @@ i:hover {
     background-color: rgb(248, 248, 248);
     overflow-y: scroll;
 }
-/*---------------------- nome utente e untente in conversaione ----------------------*/
+
+/*---------------------- nome utente e untente in conversazione ----------------------*/
 .name_user, .user_msg {
     justify-content: space-between;
+    padding: 10px;
 }
 .name_user i, .user_msg i {
     margin: 0px 10px;
 }
+.box_name_user {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+.name_user img, .user_msg img {
+    border: 1px solid rgb(255, 255, 255);
+    width: 40px;
+    border-radius: 50%;
+}
+
+/*---------------------- notifiche ----------------------*/
+.notifiche {
+    height: 70px;
+    background-color: rgb(137, 208, 226);
+    padding: 10px;
+    cursor: pointer;
+
+    gap: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.bell_box {
+    background-color: white;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.notifiche i {
+    color: rgb(137, 208, 226);
+}
+.notifiche a {
+    font-size: 12px;
+    color: grey;
+}
+.notifiche a:hover {
+    color: black;
+    transition: 0.1s;
+}
+
 /*---------------------- search ----------------------*/
 .search {
     width: 90%;
-    border-radius: 0px 5px 5px 0px;
+    border-radius: 0px 15px 15px 0px;
 }
 .fa-search {
     font-size: 14px;
@@ -111,14 +159,18 @@ i:hover {
     background-color: white;
     width: 10%;
     height: 100%;
-    border-radius: 5px 0px 0px 5px;
-    border-right: 1px solid rgb(219, 219, 215);
+    border-radius: 15px 0px 0px 15px;
+    /* border-right: 1px solid rgb(219, 219, 215); */
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 /*---------------------- scrivi un messaggio ----------------------*/
+.write_msg {
+    padding: 10px 0px;
+}
 .write_box {
     width: 80%;
 }
@@ -129,5 +181,5 @@ i:hover {
 }
 .write {
     width: 100%;
-    border-radius: 5px;
+    border-radius: 20px;
 }
