--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ i:hover {
     color: grey;
 }
 .notifiche a:hover {
-    color: black;
+    color: rgb(138, 161, 177);
     transition: 0.1s;
 }
 
