--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ p {
     cursor: pointer;
 }
 i {
-    font-size: 18px;
+    font-size: 20px;
     cursor: pointer;
 }
 i:hover {
@@ -41,6 +41,21 @@ i:hover {
     outline: none;
     font-family:'Lato', sans-serif;
 }
+::placeholder {
+    color: rgb(172, 172, 172);
+}
+
+/*---------------------- scrollbar ----------------------*/
+::-webkit-scrollbar {
+    width: 7px;
+}
+::-webkit-scrollbar-track {
+    background: #db1e1e00; 
+}
+::-webkit-scrollbar-thumb {
+    background: rgba(156, 156, 156, 0.582);
+}
+  
 
 /*---------------------- CONTAINER ----------------------*/
 .container {
@@ -55,11 +70,11 @@ i:hover {
 /*---------------------- container sections ----------------------*/
 .left-box {
     background-color: rgba(161, 112, 207, 0.164);
-    width: 35%;
+    width: 30%;
     border-right: 2px solid rgb(219, 214, 212);
 }
 .right-box {
-    width: 65%;
+    width: 70%;
     background-color: rgba(103, 141, 85, 0.301);
 }
 
@@ -70,18 +85,6 @@ i:hover {
 
     display: flex;
     align-items: center;
-}
-.search_box {
-    height: 50px;
-    background-color: rgb(236, 236, 236);
-    padding: 10px;
-    display: flex;
-    align-items: center;
-}
-.box_msg {
-    height: calc(100% - 120px); 
-    background-image: url("../img/mine.jpg");
-    overflow-y: scroll;
 }
 
 /*---------------------- nome utente e untente in conversazione ----------------------*/
@@ -106,7 +109,7 @@ i:hover {
 
 /*---------------------- notifiche ----------------------*/
 .notifiche {
-    height: 70px;
+    height: 80px;
     background-color: rgb(137, 208, 226);
     padding: 10px;
     cursor: pointer;
@@ -139,19 +142,26 @@ i:hover {
 }
 
 /*---------------------- search ----------------------*/
+.search_box {
+    height: 60px;
+    background-color: rgb(236, 236, 236);
+    border-bottom: 1px solid lightgrey;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
 .search {
     width: 90%;
-    border-radius: 0px 15px 15px 0px;
+    border-radius: 0px 20px 20px 0px;
 }
-.fa-search {
+.search_box .fa-search {
     font-size: 14px;
 }
 .search_icon_box {
     background-color: white;
     width: 10%;
     height: 100%;
-    border-radius: 15px 0px 0px 15px;
-    /* border-right: 1px solid rgb(219, 219, 215); */
+    border-radius: 20px 0px 0px 20px;
 
     display: flex;
     justify-content: center;
@@ -160,7 +170,7 @@ i:hover {
 
 /*---------------------- lista utenti ----------------------*/
 .users_list {
-    height: calc(100% - 180px); 
+    height: calc(100% - 200px); 
     background-color: rgb(248, 248, 248);
     overflow-y: scroll;
 }
@@ -171,17 +181,61 @@ i:hover {
     gap: 10px;
     padding: 15px;
     cursor: pointer;
+    position: relative;
 }
 .box_user:hover {
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(231, 231, 231);
     transition: 0.1s;
 }
 .box_user:active {
     background-color: lightgrey;
 }
+.box_user::after {
+    content: '';
+    background-color: rgb(230, 230, 230);
+    width: 85%;
+    height: 2px;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 .users_list img {
-    width: 60px;
+    width: 50px;
     border-radius: 50%;
+}
+
+/*---------------------- chat messaggi ----------------------*/
+.chat {
+    height: calc(100% - 120px); 
+    background-image: url("../img/mine.jpg");
+    overflow-y: scroll;
+    padding: 50px 80px;
+}
+.white_msg_col, .green_msg_col {
+    width: 100%;
+    border: 1px solid rgba(255, 0, 0, 0.315);
+    color: black;
+}
+.white_msg_col {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.green_msg_col {
+    display: flex;
+    justify-content: flex-end;
+}
+.white_msg_col div {
+    max-width: 360px;
+    background-color: white;
+}
+.green_msg_col div {
+    max-width: 360px;
+    background-color: rgb(202, 247, 165);
+}
+.box_msg {
+    margin-bottom: 10px;
 }
 
 /*---------------------- scrivi un messaggio ----------------------*/
